--- a/sys_config_php/config.json
+++ b/sys_config_php/config.json
@@ -1,9 +1,1 @@
-{
-    "project-name":"KauAPI",
-    "version":"1.0.0",
-    "create_at":"1",
-    "env":["dev","test","prod"],
-    "db":{
-        "db-host":"localhost:0000"
-    }
- }
+{"project-name":"KauAPI","version":"1.0.0","create_at":"1","env":["dev","test","prod"],"env-name":"","db":{"cript":true,"db-name":"kaudb-development","db-user":"obasdugaugbdwiabsd","db-pass":"449684646749461s56a498ds49"}}
