[dbo]Criando conexão com banco de dados SQLite

--- a/db_operations/config/config.json
+++ b/db_operations/config/config.json
@@ -1,17 +1,1 @@
-{
-    "project-name":"KauAPI",
-    "version":"1.0.0",
-    "create_at":"1",
-    "env":[
-       "dev",
-       "test",
-       "prod"
-    ],
-    "env-name":"",
-    "db":{
-       "cript":true,
-       "db-name":"kaudb-development",
-       "db-user":"obasdugaugbdwiabsd",
-       "db-pass":"449684646749461s56a498ds49"
-    }
- }
+{"project-name":"KauAPI","version":"1.0.0","create_at":"1","env":["dev","test","prod"],"env-name":"","db":{"cript":false,"db-driver":"sqlite","db-file":"db\/database.db"}}
