[dbo] improve for psr-4

--- a/db_operations/composer.json
+++ b/db_operations/composer.json
@@ -12,7 +12,8 @@
     "require": {},
     "autoload": {
         "psr-4": {
-            "Hyper\\":["src"]
+            "Hyper\\Database\\":["src"],
+            "Hyper\\Database\\CRUD\\":["src/crud"]
         }
     }
 }
